test/should-fail/vsgc124.f3
/*
 * @test/compile-error
 */

import java.lang.*;

var i = 1;
System.out.println("i = {i[i]}"); 
